generic browser - fix collapsed rows height

--- a/modules/Utils/GenericBrowser/theme/default.css
+++ b/modules/Utils/GenericBrowser/theme/default.css
@@ -749,8 +749,11 @@ div.expandable.collapsed.exceedsHeight {
     height: 17px !important;
     border-bottom: 1px dotted red;
 }
-div.expandable p {
-    margin-top: 0;
+div.expandable:not(.exceedsHeight) p {
+    margin: 0;
+}
+div.expandable.collapsed p {
+    margin: 0;
 }
 div.expandable.expanded {
     white-space: normal;
